docs: add authorization swagger
